last POM cleaning and adaption